crates/engine-v2/query-solver/src/tests/snapshots/engine_v2_query_solver__tests__provides__provide_with_entity_join-finalized-solution.snap
---
source: engine/crates/engine-v2/query-solver/src/tests/provides.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#products\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"products\" ]\n    3 [ label = \"categories\" ]\n    4 [ label = \"subCategories\" ]\n    5 [ label = \"FedEntity#category\", color=royalblue,shape=parallelogram ]\n    6 [ label = \"kind\" ]\n    7 [ label = \"name\" ]\n    8 [ label = \"id\" ]\n    9 [ label = \"FedEntity#category\", color=royalblue,shape=parallelogram ]\n    10 [ label = \"kind\" ]\n    11 [ label = \"name\" ]\n    12 [ label = \"id\" ]\n    13 [ label = \"id\" ]\n    0 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    1 -> 2 [ label = \"\" ]\n    2 -> 3 [ label = \"\" ]\n    3 -> 4 [ label = \"\" ]\n    4 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    5 -> 6 [ label = \"\" ]\n    4 -> 7 [ label = \"\" ]\n    4 -> 8 [ label = \"\" ]\n    3 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    9 -> 10 [ label = \"\" ]\n    3 -> 11 [ label = \"\" ]\n    3 -> 12 [ label = \"\" ]\n    2 -> 13 [ label = \"\" ]\n    5 -> 8 [ label = \"\", color=orangered,arrowhead=inv ]\n    9 -> 12 [ label = \"\", color=orangered,arrowhead=inv ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#products" ]
    2 [ label = "products" ]
    3 [ label = "categories" ]
    4 [ label = "subCategories" ]
    5 [ label = "FedEntity#category" ]
    6 [ label = "kind" ]
    7 [ label = "name" ]
    8 [ label = "id" ]
    9 [ label = "FedEntity#category" ]
    10 [ label = "kind" ]
    11 [ label = "name" ]
    12 [ label = "id" ]
    13 [ label = "id" ]
    0 -> 1 [ label = "QueryPartition" ]
    1 -> 2 [ label = "Field" ]
    2 -> 3 [ label = "Field" ]
    3 -> 4 [ label = "Field" ]
    4 -> 5 [ label = "QueryPartition" ]
    5 -> 6 [ label = "Field" ]
    4 -> 7 [ label = "Field" ]
    4 -> 8 [ label = "Field" ]
    3 -> 9 [ label = "QueryPartition" ]
    9 -> 10 [ label = "Field" ]
    3 -> 11 [ label = "Field" ]
    3 -> 12 [ label = "Field" ]
    2 -> 13 [ label = "Field" ]
    5 -> 8 [ label = "RequiredBySubgraph" ]
    9 -> 12 [ label = "RequiredBySubgraph" ]
}
