crates/engine-v2/query-solver/src/tests/snapshots/engine_v2_query_solver__tests__provides__provide_with_entity_join-solver.snap
---
source: engine/crates/engine-v2/query-solver/src/tests/provides.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"id\", style=dashed ]\n    2 [ label = \"id\", style=dashed ]\n    3 [ label = \"name\", style=dashed ]\n    4 [ label = \"kind\", style=dashed ]\n    5 [ label = \"id\", style=dashed ]\n    6 [ label = \"name\", style=dashed ]\n    7 [ label = \"kind\", style=dashed ]\n    8 [ label = \"Root#products\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    9 [ label = \"products#products\", shape=box, color=dodgerblue, style=dashed ]\n    10 [ label = \"categories#products@provides\", shape=box, color=dodgerblue, style=dashed ]\n    11 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    12 [ label = \"categories#category\", shape=box, color=dodgerblue, style=dashed ]\n    13 [ label = \"FedEntity#subcategories\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    14 [ label = \"subCategories#subcategories\", shape=box, color=dodgerblue, style=dashed ]\n    15 [ label = \"kind#subcategories@provides\", shape=box, color=dodgerblue, style=dashed ]\n    16 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    17 [ label = \"kind#category\", shape=box, color=dodgerblue, style=dashed ]\n    18 [ label = \"name#category\", shape=box, color=dodgerblue, style=dashed ]\n    19 [ label = \"id#subcategories\", shape=box, color=dodgerblue, style=dashed ]\n    20 [ label = \"kind#category\", shape=box, color=dodgerblue, style=dashed ]\n    21 [ label = \"name#category\", shape=box, color=dodgerblue, style=dashed ]\n    22 [ label = \"id#category\", shape=box, color=dodgerblue, style=dashed ]\n    23 [ label = \"subCategories#products@provides\", shape=box, color=dodgerblue, style=dashed ]\n    24 [ label = \"name#products@provides\", shape=box, color=dodgerblue, style=dashed ]\n    25 [ label = \"id#products@provides\", shape=box, color=dodgerblue, style=dashed ]\n    26 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    27 [ label = \"kind#category\", shape=box, color=dodgerblue, style=dashed ]\n    28 [ label = \"name#products@provides\", shape=box, color=dodgerblue, style=dashed ]\n    29 [ label = \"name#category\", shape=box, color=dodgerblue, style=dashed ]\n    30 [ label = \"id#products@provides\", shape=box, color=dodgerblue, style=dashed ]\n    31 [ label = \"id#products\", shape=box, color=dodgerblue, style=dashed ]\n    32 [ label=\"\", style=dashed]\n    0 -> 8 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 11 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    11 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 13 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    13 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    14 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    15 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    14 -> 16 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    16 -> 17 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    17 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    16 -> 18 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    18 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    14 -> 19 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    19 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 20 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    20 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 21 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    21 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 22 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    22 -> 2 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 23 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 13 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    23 -> 16 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    23 -> 24 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    24 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    23 -> 25 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    25 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 26 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    26 -> 27 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    27 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 28 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    28 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    26 -> 29 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    29 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 30 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    30 -> 2 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 31 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    31 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    32 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "id", steiner=0 ]
    2 [ label = "id", steiner=0 ]
    3 [ label = "name", steiner=0 ]
    4 [ label = "kind", steiner=0 ]
    5 [ label = "id", steiner=0 ]
    6 [ label = "name", steiner=0 ]
    7 [ label = "kind", steiner=0 ]
    8 [ label = "Root#products", steiner=0 ]
    9 [ label = "products#products", steiner=0 ]
    10 [ label = "categories#products@provides", steiner=0 ]
    11 [ label = "FedEntity#category", steiner=0 ]
    12 [ label = "categories#category", steiner=0 ]
    13 [ label = "FedEntity#subcategories", steiner=0 ]
    14 [ label = "subCategories#subcategories", steiner=0 ]
    15 [ label = "kind#subcategories@provides", steiner=0 ]
    16 [ label = "FedEntity#category", steiner=0 ]
    17 [ label = "kind#category", steiner=0 ]
    18 [ label = "name#category", steiner=0 ]
    19 [ label = "id#subcategories", steiner=0 ]
    20 [ label = "kind#category", steiner=0 ]
    21 [ label = "name#category", steiner=0 ]
    22 [ label = "id#category", steiner=0 ]
    23 [ label = "subCategories#products@provides", steiner=0 ]
    24 [ label = "name#products@provides", steiner=0 ]
    25 [ label = "id#products@provides", steiner=0 ]
    26 [ label = "FedEntity#category", steiner=0 ]
    27 [ label = "kind#category", steiner=0 ]
    28 [ label = "name#products@provides", steiner=0 ]
    29 [ label = "name#category", steiner=0 ]
    30 [ label = "id#products@provides", steiner=0 ]
    31 [ label = "id#products", steiner=0 ]
    32 [ label="", style=dashed]
    0 -> 8 [ cost=1, steiner=0]
    8 -> 9 [ cost=0, steiner=0]
    9 -> 10 [ cost=0, steiner=0]
    9 -> 11 [ cost=1, steiner=0]
    11 -> 12 [ cost=0, steiner=0]
    12 -> 13 [ cost=1, steiner=0]
    13 -> 14 [ cost=0, steiner=0]
    14 -> 15 [ cost=0, steiner=0]
    15 -> 7 [ cost=0, steiner=0]
    14 -> 16 [ cost=1, steiner=0]
    16 -> 17 [ cost=0, steiner=0]
    17 -> 7 [ cost=0, steiner=0]
    16 -> 18 [ cost=0, steiner=0]
    18 -> 6 [ cost=0, steiner=0]
    14 -> 19 [ cost=0, steiner=0]
    19 -> 5 [ cost=0, steiner=0]
    12 -> 20 [ cost=0, steiner=0]
    20 -> 4 [ cost=0, steiner=0]
    12 -> 21 [ cost=0, steiner=0]
    21 -> 3 [ cost=0, steiner=0]
    12 -> 22 [ cost=0, steiner=0]
    22 -> 2 [ cost=0, steiner=0]
    10 -> 23 [ cost=0, steiner=0]
    10 -> 13 [ cost=1, steiner=0]
    23 -> 16 [ cost=1, steiner=0]
    23 -> 24 [ cost=0, steiner=0]
    24 -> 6 [ cost=0, steiner=0]
    23 -> 25 [ cost=0, steiner=0]
    25 -> 5 [ cost=0, steiner=0]
    10 -> 26 [ cost=1, steiner=0]
    26 -> 27 [ cost=0, steiner=0]
    27 -> 4 [ cost=0, steiner=0]
    10 -> 28 [ cost=0, steiner=0]
    28 -> 3 [ cost=0, steiner=0]
    26 -> 29 [ cost=0, steiner=0]
    29 -> 3 [ cost=0, steiner=0]
    10 -> 30 [ cost=0, steiner=0]
    30 -> 2 [ cost=0, steiner=0]
    9 -> 31 [ cost=0, steiner=0]
    31 -> 1 [ cost=0, steiner=0]
    32 -> 0 [ cost=0, steiner=0]
}
