crates/engine-v2/query-solver/src/tests/snapshots/engine_v2_query_solver__tests__provides__provides_full-partial-solution.snap
---
source: engine/crates/engine-v2/query-solver/src/tests/provides.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#products\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"products\" ]\n    3 [ label = \"categories\" ]\n    4 [ label = \"subCategories\" ]\n    5 [ label = \"name\" ]\n    6 [ label = \"id\" ]\n    7 [ label = \"name\" ]\n    8 [ label = \"id\" ]\n    9 [ label = \"id\" ]\n    0 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    1 -> 2 [ label = \"\" ]\n    2 -> 3 [ label = \"\" ]\n    3 -> 4 [ label = \"\" ]\n    4 -> 5 [ label = \"\" ]\n    4 -> 6 [ label = \"\" ]\n    3 -> 7 [ label = \"\" ]\n    3 -> 8 [ label = \"\" ]\n    2 -> 9 [ label = \"\" ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#products" ]
    2 [ label = "products" ]
    3 [ label = "categories" ]
    4 [ label = "subCategories" ]
    5 [ label = "name" ]
    6 [ label = "id" ]
    7 [ label = "name" ]
    8 [ label = "id" ]
    9 [ label = "id" ]
    0 -> 1 [ label = "QueryPartition" ]
    1 -> 2 [ label = "Field" ]
    2 -> 3 [ label = "Field" ]
    3 -> 4 [ label = "Field" ]
    4 -> 5 [ label = "Field" ]
    4 -> 6 [ label = "Field" ]
    3 -> 7 [ label = "Field" ]
    3 -> 8 [ label = "Field" ]
    2 -> 9 [ label = "Field" ]
}
