crates/engine-v2/query-solver/src/tests/snapshots/engine_v2_query_solver__tests__provides__provides_full-solved.snap
---
source: engine/crates/engine-v2/query-solver/src/tests/provides.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"id\", color=forestgreen ]\n    2 [ label = \"id\", color=forestgreen ]\n    3 [ label = \"name\", color=forestgreen ]\n    4 [ label = \"id\", color=forestgreen ]\n    5 [ label = \"name\", color=forestgreen ]\n    6 [ label = \"Root#products\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    7 [ label = \"products#products\", shape=box, color=dodgerblue, color=forestgreen ]\n    8 [ label = \"categories#products@provides\", shape=box, color=dodgerblue, color=forestgreen ]\n    9 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    10 [ label = \"categories#category\", shape=box, color=dodgerblue, style=dashed ]\n    11 [ label = \"FedEntity#subcategories\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    12 [ label = \"subCategories#subcategories\", shape=box, color=dodgerblue, style=dashed ]\n    13 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    14 [ label = \"name#category\", shape=box, color=dodgerblue, style=dashed ]\n    15 [ label = \"id#subcategories\", shape=box, color=dodgerblue, style=dashed ]\n    16 [ label = \"name#category\", shape=box, color=dodgerblue, style=dashed ]\n    17 [ label = \"id#category\", shape=box, color=dodgerblue, style=dashed ]\n    18 [ label = \"subCategories#products@provides\", shape=box, color=dodgerblue, color=forestgreen ]\n    19 [ label = \"name#products@provides\", shape=box, color=dodgerblue, color=forestgreen ]\n    20 [ label = \"id#products@provides\", shape=box, color=dodgerblue, color=forestgreen ]\n    21 [ label = \"name#products@provides\", shape=box, color=dodgerblue, color=forestgreen ]\n    22 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    23 [ label = \"name#category\", shape=box, color=dodgerblue, style=dashed ]\n    24 [ label = \"id#products@provides\", shape=box, color=dodgerblue, color=forestgreen ]\n    25 [ label = \"id#products\", shape=box, color=dodgerblue, color=forestgreen ]\n    26 [ label=\"\", style=dashed]\n    0 -> 6 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    6 -> 7 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    7 -> 8 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    7 -> 9 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 11 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    11 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 13 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    13 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    14 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    15 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 16 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    16 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 17 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    17 -> 2 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 18 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    8 -> 11 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    18 -> 19 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    19 -> 5 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    18 -> 13 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    18 -> 20 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    20 -> 4 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    8 -> 21 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    21 -> 3 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    8 -> 22 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    22 -> 23 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    23 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 24 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    24 -> 2 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    7 -> 25 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    25 -> 1 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    26 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "id", steiner=1 ]
    2 [ label = "id", steiner=1 ]
    3 [ label = "name", steiner=1 ]
    4 [ label = "id", steiner=1 ]
    5 [ label = "name", steiner=1 ]
    6 [ label = "Root#products", steiner=1 ]
    7 [ label = "products#products", steiner=1 ]
    8 [ label = "categories#products@provides", steiner=1 ]
    9 [ label = "FedEntity#category", steiner=0 ]
    10 [ label = "categories#category", steiner=0 ]
    11 [ label = "FedEntity#subcategories", steiner=0 ]
    12 [ label = "subCategories#subcategories", steiner=0 ]
    13 [ label = "FedEntity#category", steiner=0 ]
    14 [ label = "name#category", steiner=0 ]
    15 [ label = "id#subcategories", steiner=0 ]
    16 [ label = "name#category", steiner=0 ]
    17 [ label = "id#category", steiner=0 ]
    18 [ label = "subCategories#products@provides", steiner=1 ]
    19 [ label = "name#products@provides", steiner=1 ]
    20 [ label = "id#products@provides", steiner=1 ]
    21 [ label = "name#products@provides", steiner=1 ]
    22 [ label = "FedEntity#category", steiner=0 ]
    23 [ label = "name#category", steiner=0 ]
    24 [ label = "id#products@provides", steiner=1 ]
    25 [ label = "id#products", steiner=1 ]
    26 [ label="", style=dashed]
    0 -> 6 [ cost=0, steiner=1]
    6 -> 7 [ cost=0, steiner=1]
    7 -> 8 [ cost=0, steiner=1]
    7 -> 9 [ cost=1, steiner=0]
    9 -> 10 [ cost=0, steiner=0]
    10 -> 11 [ cost=1, steiner=0]
    11 -> 12 [ cost=0, steiner=0]
    12 -> 13 [ cost=1, steiner=0]
    13 -> 14 [ cost=0, steiner=0]
    14 -> 5 [ cost=0, steiner=0]
    12 -> 15 [ cost=0, steiner=0]
    15 -> 4 [ cost=0, steiner=0]
    10 -> 16 [ cost=0, steiner=0]
    16 -> 3 [ cost=0, steiner=0]
    10 -> 17 [ cost=0, steiner=0]
    17 -> 2 [ cost=0, steiner=0]
    8 -> 18 [ cost=0, steiner=1]
    8 -> 11 [ cost=1, steiner=0]
    18 -> 19 [ cost=0, steiner=1]
    19 -> 5 [ cost=0, steiner=1]
    18 -> 13 [ cost=1, steiner=0]
    18 -> 20 [ cost=0, steiner=1]
    20 -> 4 [ cost=0, steiner=1]
    8 -> 21 [ cost=0, steiner=1]
    21 -> 3 [ cost=0, steiner=1]
    8 -> 22 [ cost=1, steiner=0]
    22 -> 23 [ cost=0, steiner=0]
    23 -> 3 [ cost=0, steiner=0]
    8 -> 24 [ cost=0, steiner=1]
    24 -> 2 [ cost=0, steiner=1]
    7 -> 25 [ cost=0, steiner=1]
    25 -> 1 [ cost=0, steiner=1]
    26 -> 0 [ cost=0, steiner=0]
}
